# pika

./: .gitignore  AGENTS.md  Cargo.toml  LICENSE  README.md  flake.nix  fly.pika-bot.toml  justfile  spec-v1.md  spec-v2.md
.claude/skills/pr-shepherd/: SKILL.md
.github/workflows/: pre-merge.yml  release.yml
android/: settings.gradle.kts
android/app/: build.gradle.kts
bots/: pi-bridge.py
cli/: Cargo.toml
cli/src/: fly_machines.rs  harness.rs  main.rs
crates/marmotd/: Cargo.toml
crates/marmotd/src/: call_audio.rs  daemon.rs  main.rs
crates/pika-bot/: Dockerfile  entrypoint.sh
crates/pika-desktop/: Cargo.toml
crates/pika-desktop/src/: app_manager.rs  main.rs  theme.rs  video.rs  video_shader.rs
crates/pika-desktop/src/shaders/: video.wgsl
crates/pika-desktop/src/views/: avatar.rs  call_banner.rs  call_screen.rs  chat_rail.rs  conversation.rs  group_info.rs  login.rs  message_bubble.rs  mod.rs  my_profile.rs  new_chat.rs  new_group_chat.rs  peer_profile.rs
crates/pika-media/src/: network.rs  tracks.rs
crates/pika-nse/: Cargo.toml
crates/pika-nse/src/: lib.rs
crates/pika-share/: uniffi.toml
crates/pika-share/src/: lib.rs
crates/pikahut/tests/: integration_deterministic.rs  integration_openclaw.rs  integration_primal.rs  integration_public.rs
crates/rmp-cli/src/: bindings.rs  cli.rs  config.rs  devices.rs  doctor.rs  main.rs  run.rs  util.rs
docs/: how-to-run-e2e-ui-tests-with-video.md  ios-swiftui-audit.md  ios-testflight-ci.md  pika-cli-design.md  release.md  rmp-ci.md
docs/testing/: integration-matrix.md  shared-fixture-corrective-finish.md
ios/: Info.plist  project.yml
ios/Bindings/: pika_core.swift  pika_coreFFI.h  pika_coreFFI.modulemap
ios/NotificationService/: NotificationService.swift
ios/Pika.xcodeproj/: project.pbxproj
ios/ShareExtension/: Info.plist  ShareQueueManager.swift  ShareViewController.swift
ios/Sources/: AppManager.swift  CallAudioSessionCoordinator.swift  ContentView.swift  KeychainNsecStore.swift  PikaApp.swift  PreviewData.swift  TestIds.swift  ViewState.swift
ios/Sources/Views/: AvatarView.swift  BlurhashView.swift  ChatListView.swift  ChatMediaGalleryView.swift  ChatView.swift  FullscreenImageViewer.swift  GroupInfoView.swift  InvertedMessageList.swift  (+9 more)
ios/Tests/: AppManagerTests.swift  InvertedMessageListLayoutTests.swift  MessageCollectionLayoutTests.swift
ios/UITests/: PikaUITests.swift
prompts/: android-agent-device-manual-qa.md  ios-agent-device-manual-qa.md  ios-agent-device-simctl-debug.md
repro/: nip70-protected-relay-repro.md
rust/: Cargo.toml  build.rs
rust/src/: actions.rs  android_keyring.rs  core.rs  lib.rs  logging.rs  mdk_support.rs  state.rs  updates.rs
rust/tests/: app_flows.rs  e2e_deployed_bot_call.rs  e2e_local_marmotd_call.rs  e2e_local_relay.rs  e2e_public_relays.rs
scripts/: bump-pikachat.sh  set-release-version  sync-pikachat-version
todos/: microvm-v1.md  microvm-v2.md  pikahut-shared-fixture-corrective.md  shared-fixture-closeout-corrective.md  shared-fixture-corrective-finish.md
tools/: agent-device  android-avd-ensure  android-emulator-ensure  ios-runtime-doctor  ios-sim-ensure  relay-scan  run-android  run-ios  simctl  ui-e2e-local  xcrun
(+48 files in other folders)
