[workspace]
resolver = "2"
members = [
  "rust",
  "uniffi-bindgen",
  "cli",
  "crates/pika-agent-protocol",
  "crates/pika-agent-control-plane",
  "crates/pika-agent-microvm",
  "crates/pika-relay-profiles",
  "crates/pika-marmot-runtime",
  "crates/hypernote-protocol",
  "crates/pikachat-sidecar",
  "crates/pika-desktop",
  "crates/pika-media",
  "crates/pika-nse",
  "crates/pika-share",
  "crates/pika-tls",
  "crates/rmp-cli",
  "crates/pika-server",
  "crates/pika-news",
  "crates/pika-test-utils",
  "crates/pikahut",
  "crates/vm-spawner",
]

[workspace.dependencies]
# Pin MDK once for the whole workspace to avoid version skew between members.
# (MDK is load-bearing for interop: MLS state formats, key package behavior, etc.)
mdk-core = { git = "https://github.com/benthecarman/mdk", rev = "5c551d40c4e47d8f31165b194d77d3d9461b31fd", features = ["mip04"] }
mdk-sqlite-storage = { git = "https://github.com/benthecarman/mdk", rev = "5c551d40c4e47d8f31165b194d77d3d9461b31fd" }
mdk-storage-traits = { git = "https://github.com/benthecarman/mdk", rev = "5c551d40c4e47d8f31165b194d77d3d9461b31fd" }
hypernote-mdx = { git = "https://github.com/futurepaul/hypernote-mdx", rev = "9c73231c980a03e6b149f62ccce2e58c9563744f", version = "0.3.0" }
hypernote-protocol = { path = "crates/hypernote-protocol" }
