[workspace]
resolver = "2"
members = [
  "rust",
  "uniffi-bindgen",
  "cli",
  "crates/pika-agent-protocol",
  "crates/pika-agent-control-plane",
  "crates/pika-agent-microvm",
  "crates/pika-relay-profiles",
  "crates/pika-marmot-runtime",
  "crates/hypernote-protocol",
  "crates/pikachat-sidecar",
  "crates/pika-desktop",
  "crates/pika-media",
  "crates/pika-nse",
  "crates/pika-share",
  "crates/pika-tls",
  "crates/rmp-cli",
  "crates/pika-server",
  "crates/pika-news",
  "crates/pika-test-utils",
  "crates/pikahut",
  "crates/vm-spawner",
]

[workspace.dependencies]
# Pin MDK once for the whole workspace to avoid version skew between members.
# (MDK is load-bearing for interop: MLS state formats, key package behavior, etc.)
mdk-core = { git = "https://github.com/benthecarman/mdk", rev = "fd1bd2932585776c1647e89a35d6e78110f0ae70", features = ["mip04"] }
mdk-sqlite-storage = { git = "https://github.com/benthecarman/mdk", rev = "fd1bd2932585776c1647e89a35d6e78110f0ae70", default-features = false, features = ["bundled"] }
mdk-storage-traits = { git = "https://github.com/benthecarman/mdk", rev = "fd1bd2932585776c1647e89a35d6e78110f0ae70" }
hypernote-mdx = { git = "https://github.com/futurepaul/hypernote-mdx", rev = "9c73231c980a03e6b149f62ccce2e58c9563744f", version = "0.3.0" }
hypernote-protocol = { path = "crates/hypernote-protocol" }
